@startuml

title __INPUT's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.Input {
          ~ pressedKeys : Set<Integer>
          ~ pressedMouseKeys : Set<Integer>
          - mouseX : int
          - mouseY : int
          - playerInputEventQueue : Queue<playerInputEvent>
          - scroll : int
          + Input()
          + getMouseX()
          + getMouseY()
          + getScroll()
          + isKey()
          + isMouseKey()
          + keyPressed()
          + keyReleased()
          + keyTyped()
          + mouseClicked()
          + mouseDragged()
          + mouseEntered()
          + mouseExited()
          + mouseMoved()
          + mousePressed()
          + mouseReleased()
          + mouseWheelMoved()
          + nextEvent()
          - addInput()
          - getNextEventInQueue()
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      enum InputType {
        CONTINUOUS
        DOWN
        MOUSE_CONTINUOUS
        MOUSE_DOWN
        MOUSE_UP
        NULL
        UP
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.playerInputEvent {
          - event : InputEvent
          - isMouseEvent : boolean
          + getInputEvent()
          + getInputType()
          + isMouse()
          ~ playerInputEvent()
      }
    }
  }
  

  com.apetrei.engine.input.Input .up.|> java.awt.event.KeyListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseMotionListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseWheelListener
  com.apetrei.engine.input.Input o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.input.playerInputEvent o-- com.apetrei.engine.input.InputType : inputType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
